--- a/index.html
+++ b/index.html
@@ -21,28 +21,19 @@
     >
       <p>王永胜</p>
 
-      <p>个人信息：男|1993.5.6|南阳 电话:19836705650 微信：wys632</p>
+      <p>性别：男</p>
       <p>教育经历</p>
       <p>
-        中国人民解放军战略支援部队航天工程大学 大专 机械制配工艺 2015.9-2018.6
+       战略支援部队航天工程大学 大专 机械制配工艺 
       </p>
       <p>
-        1.学习机械制配工艺，车工、钳工、焊工，取得毕业证书，取得车工和焊工中级技能证书（学校改编未发）
+        1.学习机械制配工艺，车工、钳工、焊工，取得毕业证书，取得车工和焊工中级技能证书
       </p>
       <p>
         2.取得二维CAD和三维Solidworks证书，简单学习过数控机床，掌握一些数控编程（法兰克系统）
       </p>
-      <p>中国人民解放军陆军装甲兵学院 大专 机械加工制造 2019.2-2020.4</p>
-      <p>
-        在校进行为期三个月的士官升级培训，进一步巩固和提升钳工，焊工，钣金及其他相关技能
-      </p>
       <p>工作经历</p>
-      <p>中国人民解放军 士兵、班长、学员 2011.12-2019.12</p>
-      <p>内容</p>
-      <p>依法服兵役，驻守边防，巡逻边境线</p>
-      <p>业绩</p>
-      <p>获得优秀士兵，服役期间通过全军统一考试考取士官学校，获得大专毕业证</p>
-      <p>河南大裕城商贸有限公司方城公司 物业储备干部 2020.8-2021.4</p>
+      <p>河南大裕城商贸有限公司方城公司 物业储备干部 </p>
       <p>内容</p>
       <p>1.负责大裕城整体物业后勤部安保、保洁、维修的工作安排和协调</p>
       <p>2.节假日、店庆等活动的后勤保障</p>
@@ -51,7 +42,7 @@
       <p>
         先后组织并参与了公司举办的国庆朗诵活动、店庆、双十一、春节等活动，保障活动顺利圆满结束
       </p>
-      <p>北京快松果科技有限公司 车辆调度员 2021.4-2021.6</p>
+      <p>北京快松果科技有限公司 车辆调度员 </p>
       <p>内容</p>
       <p>负责车辆在不同区域的调度及对车辆的简单维修</p>
       <p>业绩</p>
@@ -72,7 +63,8 @@
         2.二维CAD（机械设计方向）相关专业知识：工程图标准、识图能力、ACAD工具包。
       </p>
       <p>
-        3.机械基础、金属切削工具、机械制造基础、金属材料及热处理、机械制图、金属切削机床、数控加工技术、钳工工艺与技能、焊工工艺与技能、机械加工工艺与技能、机械制造工艺与夹具
+        3.机械基础、金属切削工具、机械制造基础、金属材料及热处理、机械制图、金属切削机床、
+        数控加工技术、 钳工工艺与技能、焊工工艺与技能、机械加工工艺与技能、机械制造工艺与夹具
       </p>
       <p>个人优势</p>
       <p>1.上进心强，会主动学习以不断提高自身的能力与综合素质。</p>
