Update index - 2.html

--- a/index - 2.html
+++ b/index - 2.html
@@ -74,7 +74,7 @@
       <p>
         2.二维CAD（机械设计方向）相关专业知识：工程图标准、识图能力、ACAD工具包。
       </p>
-      <p>
+      <p class="nowrap">
         3.机械基础、金属切削工具、机械制造基础、金属材料及热处理、机械制图、金属切削机床、数控加工技术、钳工工艺与技能、焊工工艺与技能、机械加工工艺与技能、机械制造工艺与夹具
       </p>
       <h2>个人优势</h2>
