Update index - 2.html

--- a/index - 2.html
+++ b/index - 2.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>王永胜</title>
+    <style>
+      .nowrap {
+        white-space: nowrap;
+      } /*
+  允许单词内断句，首先会尝试挪到下一行，看看下一行的宽度够不够，
+  不够的话就进行单词内的断句 */
+    </style>
   </head>
   <body style="margin: 0">
     <div style="background-color: grey; text-align: center; padding: 40px">
@@ -19,9 +26,6 @@
         line-height: 1.7; 
       "
     >
-          .nowrap{white-space:nowrap;}   
-            /* 允许单词内断句，首先会尝试挪到下一行，看看下一行的宽度够不够，   
-            不够的话就进行单词内的断句 */  
       <h1>王永胜</h1>
       <h2>个人信息：</h2>
       <p>男|1993.5.6|南阳 电话:19836705650 微信：wys632</p>
