Update index - 2.html

--- a/index - 2.html
+++ b/index - 2.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>王永胜</title>
-    <style>
+    <style
       .nowrap {
         white-space: nowrap;
       } /*
   允许单词内断句，首先会尝试挪到下一行，看看下一行的宽度够不够，
-  不够的话就进行单词内的断句 */
+  不够的话就进行单词内的断句 */>
     </style>
   </head>
   <body style="margin: 0">
